# search_engine

./: .gitignore  CMakeLists.txt  README.md  convex_optimization_crawled.db  inverted_index.csv  main.c  new_seeds.txt  pyproject.toml  requirements.txt  search-engine.ipynb
frontend/: README.md  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/services/: api.js
include/: crawler.h
search_engine/: pyproject.toml  requirements.txt
search_engine/scrap_website/: apps.py  custom_logger.py  renderers.py  scrap_website.py  serializers.py  urls.py  views.py
search_engine/search_engine/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
src/: crawler.c  custom_logger.py  main.c  main.py  scrap_website.py  search_engine.py
